Fixed inventory button cut off

--- a/style.css
+++ b/style.css
@@ -2367,7 +2367,7 @@ button {
     #backpack-icon {
         top: 6px;
         bottom: auto;
-        right: 6px;
+        right: 16px;
         padding: 0;
     }
 
